# graphics-25-26-FieldOfCIovers

./: REFERENCES.md
Coursework/Rasteriser/: CMakeLists.txt  LinAlg.hpp  Shading.hpp  rasteriser.cpp
Coursework/Rasteriser/Models/: backgroundMountains.mtl  goodspringHouseM.mtl  groundMesh.mtl  minigun.mtl  ncrFlagMesh.mtl  ncrFlagMesh2.mtl  ncrFlagPole.mtl  powerArmourGloves.mtl  powerArmourHelmet.mtl  ranchHouseM.mtl  roadMesh.mtl  sandbagMesh.mtl  skyMesh.mtl  treeLeavesMesh.mtl  treeMesh.mtl  watertowerMesh.mtl
Coursework/Rasteriser/Models/.mayaSwatches/: tnwPowerArmourB.png_hcm.swatch
Coursework/Raytracer/: main.cpp
Labs/week1/: Task1.cpp
Labs/week2/: Vector3.hpp
Labs/week3/: Task1.cpp  Vector2.hpp  Vector3.hpp
Labs/week4/: Task1.cpp
Labs/week6/: Task1.cpp
Labs/week8/: Light.hpp  Shading.hpp  Task1.cpp  Task2.cpp
